# svara_darshini

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  capacitor.config.ts  drizzle.config.ts  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build_desktop.yml  checks.yml  release_app.yml
android/: .gitignore  build.gradle  capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
app/: Cargo.toml
app/src/: app.rs  main.rs
app/src/audio/: capture.rs  mod.rs  processing.rs  types.rs
app/src/music/: constants.rs  mod.rs  note_mapping.rs
app/src/ui/: device_selector.rs  mod.rs  note_selectors.rs  time_graph.rs
mobile-app/: README.md  pubspec.yaml
mobile-app/android/app/: build.gradle.kts
mobile-app/lib/: main.dart
mobile-app/lib/core/: audio_info.dart  constants.dart  theme.dart
mobile-app/lib/painters/: circular_pitch_painter.dart  time_graph_painter.dart
mobile-app/lib/providers/: pitch_provider.dart  settings_provider.dart
mobile-app/test/: widget_test.dart
scripts/: generate_android_icons.sh  generate_android_splash.sh
src/: app.css  app.html  app.pcss  app.scss  showcqt.d.ts
src/components/: AppBar.svelte  Spinner.svelte  ThemeChanger.svelte  TopAppBar.svelte  icons.ts
src/img/: make_imgs.sh
src/lib/: pwa-stub.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/state/: main.svelte.ts  page_titles.ts
src/tools/: date.ts  kry.ts
static/: _redirects  manifest.json
(+40 files in other folders)
